--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -31,8 +31,11 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     
     <body onload="app.init()">
         X:<input id="x" type="number"/>
-        Y:<input id="y" type="number"/>        
+        Y:<input id="y" type="number"/>
         <button onclick="app.publishPoint($('#x').val(),$('#y').val())">Send point</button>
         <canvas id="canvas" width="800" height="600"></canvas>
+
+        Paint Id: <input type="number" id="pId">       
+        <button onclick="app.connectAndSubscribe()">connect</button>
     </body>
 </html>
