--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -24,13 +24,13 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
         <script src="/webjars/sockjs-client/sockjs.min.js"></script>
         <script src="/webjars/stomp-websocket/stomp.min.js"></script>
         <script src="app.js"></script>
-        <link rel="stylesheet" href="p.css" />
+        <link rel="stylesheet" href="styles.css" />
 
     </head>
 
 
     
-    <body onload="app.init()">
+    <body>
         <label for="pId">ID de la sala: </label>
         <input type="number" id="pId">       
         <button onclick="app.connectAndSubscribe()">connect</button>
